--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
     branches: ["main"]
 
 env:
-  IMAGE_NAME: ${{ github.repository_owner }}/dockerized-service-deployment
+  IMAGE_NAME: ${{ toLower(github.repository_owner) }}/${{ toLower(github.repository) }}
 
 jobs:
   build-and-push:
