--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,13 +4,13 @@ on:
   push:
     branches: ["main"]
 
-env:
-  IMAGE_NAME: ${{ tolower(github.repository_owner) }}/${{ tolower(github.repository) }}
-
 jobs:
   build-and-push:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
+
+    outputs:
+      image_name: ${{ steps.prepare.outputs.image_name }}
 
     permissions:
       contents: read
@@ -19,6 +19,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Prepare image name
+        id: prepare
+        run: |
+          echo "image_name=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
@@ -33,8 +38,8 @@ jobs:
           context: .
           push: true
           tags: |
-            ghcr.io/${{ env.IMAGE_NAME }}:${{ github.sha }}
-            ghcr.io/${{ env.IMAGE_NAME }}:latest
+            ghcr.io/${{ steps.prepare.outputs.image_name }}:${{ github.sha }}
+            ghcr.io/${{ steps.prepare.outputs.image_name }}:latest
 
   deploy:
     name: Deploy to Server
@@ -49,10 +54,12 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
+            IMAGE_NAME="ghcr.io/${{ needs.build-and-push.outputs.image_name }}"
+            IMAGE_TAG="${{ github.sha }}"
 
             docker login ghcr.io -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }}
 
-            docker pull ghcr.io/${{ env.IMAGE_NAME }}:${{ github.sha }}
+            docker pull $IMAGE_NAME:$IMAGE_TAG
 
             docker stop node-service || true
             docker rm node-service || true
@@ -64,4 +71,4 @@ jobs:
               -e APP_USERNAME=${{ secrets.APP_USERNAME }} \
               -e APP_PASSWORD=${{ secrets.APP_PASSWORD }} \
               -e APP_SECRET_MESSAGE="${{ secrets.APP_SECRET_MESSAGE }}" \
-              ghcr.io/${{ env.IMAGE_NAME }}:${{ github.sha }}
+              $IMAGE_NAME:$IMAGE_TAG
