--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,28 +42,28 @@ jobs:
             ghcr.io/${{ steps.prepare.outputs.image_name }}:latest
 
   deploy:
-  name: Deploy to Server
-  runs-on: self-hosted # ← Change ici
-  needs: build-and-push
+    name: Deploy to Server
+    runs-on: self-hosted
+    needs: build-and-push
 
-  steps:
-    - name: Deploy locally
-      run: |
-        IMAGE_NAME="ghcr.io/${{ needs.build-and-push.outputs.image_name }}"
-        IMAGE_TAG="${{ github.sha }}"
+    steps:
+      - name: Deploy locally
+        run: |
+          IMAGE_NAME="ghcr.io/${{ needs.build-and-push.outputs.image_name }}"
+          IMAGE_TAG="${{ github.sha }}"
 
-        echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+          echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-        docker pull $IMAGE_NAME:$IMAGE_TAG
+          docker pull $IMAGE_NAME:$IMAGE_TAG
 
-        docker stop node-service || true
-        docker rm node-service || true
+          docker stop node-service || true
+          docker rm node-service || true
 
-        docker run -d \
-          --name node-service \
-          --restart always \
-          -p 3000:3000 \
-          -e APP_USERNAME="${{ secrets.APP_USERNAME }}" \
-          -e APP_PASSWORD="${{ secrets.APP_PASSWORD }}" \
-          -e APP_SECRET_MESSAGE="${{ secrets.APP_SECRET_MESSAGE }}" \
-          $IMAGE_NAME:$IMAGE_TAG
+          docker run -d \
+            --name node-service \
+            --restart always \
+            -p 3000:3000 \
+            -e APP_USERNAME="${{ secrets.APP_USERNAME }}" \
+            -e APP_PASSWORD="${{ secrets.APP_PASSWORD }}" \
+            -e APP_SECRET_MESSAGE="${{ secrets.APP_SECRET_MESSAGE }}" \
+            $IMAGE_NAME:$IMAGE_TAG
