--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,22 +48,27 @@ jobs:
 
     steps:
       - name: Deploy locally
+        env:
+          IMAGE_NAME: ghcr.io/${{ needs.build-and-push.outputs.image_name }}
+          IMAGE_TAG: ${{ github.sha }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_ACTOR: ${{ github.actor }}
+          APP_USERNAME: ${{ secrets.APP_USERNAME }}
+          APP_PASSWORD: ${{ secrets.APP_PASSWORD }}
+          APP_SECRET_MESSAGE: ${{ secrets.APP_SECRET_MESSAGE }}
         run: |
-          IMAGE_NAME="ghcr.io/${{ needs.build-and-push.outputs.image_name }}"
-          IMAGE_TAG="${{ github.sha }}"
+          echo "$GITHUB_TOKEN" | docker login ghcr.io -u "$GITHUB_ACTOR" --password-stdin
 
-          echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+          docker pull "$IMAGE_NAME:$IMAGE_TAG"
 
-          docker pull $IMAGE_NAME:$IMAGE_TAG
-
-          docker stop node-service || true
-          docker rm node-service || true
+          docker stop node-service 2>/dev/null || true
+          docker rm node-service 2>/dev/null || true
 
           docker run -d \
             --name node-service \
             --restart always \
             -p 3000:3000 \
-            -e APP_USERNAME="${{ secrets.APP_USERNAME }}" \
-            -e APP_PASSWORD="${{ secrets.APP_PASSWORD }}" \
-            -e APP_SECRET_MESSAGE="${{ secrets.APP_SECRET_MESSAGE }}" \
-            $IMAGE_NAME:$IMAGE_TAG
+            -e APP_USERNAME="$APP_USERNAME" \
+            -e APP_PASSWORD="$APP_PASSWORD" \
+            -e APP_SECRET_MESSAGE="$APP_SECRET_MESSAGE" \
+            "$IMAGE_NAME:$IMAGE_TAG"
